# labwork1

./: main.py  pyproject.toml  requirements.txt
src/: logger.py  task1.py  task2.py  task3.py  task4.py  task5.py  task_4.py
src/labwork1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_task1.py  test_task2.py  test_task3.py  test_task4.py  test_task5.py  tests_task1.py
